stylefix: fix Error404 margin with Footer on small screen

--- a/src/pages/Error404/Error404.css
+++ b/src/pages/Error404/Error404.css
@@ -34,7 +34,7 @@
   }
 
   .Error404__link-to-home {
-    margin: 4rem 0 0 0;
+    margin: 4rem 0;
 
     font-size: var(--txt-size);
   }
